        - Finalized Makefile, README, and CHANGELOG for submission


--- Assignment 1.03 ---
* Day 1 (2024-02-19)
    Evening:
    - Random clean up
    - Placed PC on maps.
    - Ensured PC always spawns on the gate where they came from
* Day 2 (2024-02-21)
    Afternoon:
    - Implemented Dijkstra's algorithm
    - Set up special commands to display the distance map
    - Finalized for submission.


-- Assignment 1.04 --
* Day 1 (2024-02-27)
    Afternoon:
    - Set up scaffolding for NPCs
    - Defined some important header files
    - Started implementing event system
    Evening:
    - Implemented movement AI
    - Hooked up AI with event system and game systems
    - Successful game loop
    - Spent way too long debugging the AI
    - Finished 4/6 AIs

* Day 2 (2024-02-28)
    Evening:
    - Wrote lots of documentation
    - Finished the other AIs
    - Fixed some memory leaks
    - Refactoring
    - Finalized Makefile, README, and CHANGELOG for submission


-- Assignment 1.05 --
* Day 1 (2024-03-19)
    Evening:
    - Set up ncurses
    - Set up input handling
    - Implemented a simple array list for holding entities
    - Handled character movement
* Day 2 (2024-03-20)
    Afternoon:
    - Completed movement control
    - Vastly optimized ncurses updates, can now refresh at 21kHz without flickering (3kHz on pyrite)
    Evening:
    - Implemented context switching
    - Implemented trainer list
    - Implemented placeholder battles interface
    - Implemented placeholder building interface
    - Refactored to use globals GAME and OPTIONS


-- Assignment 1.06 --
* Day 1 (2024-03-24)
    Evening:
    - Started porting to C++
    - First successful compile, no warnings
* Day 2 (2024-03-26)
    Evening:
    - Refactored the entity system to OOP
* Day 3 (2024-03-27)
    Afternoon:
    - Refactored the map building system to OOP
    - Refactored entity system to live inside each map, instead of on the game itself
    - Can now move between adjacent maps via gates