@@ -1,10 +1,14 @@
 #ifndef MAPBUILDER_H
 #define MAPBUILDER_H
 
+#include <string>
 #include "core/constants.hpp"
 #include "entities/entity_manager.hpp"
 
 #define DISTANCE_FIELD_MEMOIZATION_SIZE 40
+
+#define LOCATION_NAME_PREFIXES { "PALLET", "PEWTER", "CERULEAN", "LAVENDER", "VIRIDIAN", "SAFFRON", "GOLDENROD", "ECRUTEAK", "FORTREE", "LILYCOVE", "SUNYSHORE", "CASTELIA", "LUMIOSE", "MOTOSTOKE", "VIRIDIAN", "CINNABAR", "FUCHSIA", "OLIVINE", "AZALEA", "BLACKTHORN", "MOSSDEEP", "SOOTOPOLIS", "VEILSTONE", "HEARTHOME", "NIMBASA", "DRIFTVEIL", "OPELUCID", "SNOWPOINT", "PACIFIDLOG", "FLOAROMA", "CANALAVE", "MYSTIC", "OMINOUS", "FLOWERY", "MYSTERIOUS", "LUSH", "LAVENDER", "GRASSY"}
+#define LOCATION_NAME_SUFFIXES { "WOODLAND", "LAKES", "WOODS", "FOREST", "HILLS", "ZONE", "ROADS", "PATH", "MARSH", "PRAIRIE", "GROVE", "GARDEN", "FIELDS", "PLAINS", "CLIFFS", "ORCHARD", "CLEARING"}
 
 class EntityManager;
 
@@ -50,6 +54,9 @@ public:
     int globalY;
     bool isSpawnMap;
     float overgrowth;
+
+    // A randomly generated name
+    std::string name;
 
     Tile tileset[MAP_HEIGHT][MAP_WIDTH] {};
     DistanceField* memoizedDistanceFields[DISTANCE_FIELD_MEMOIZATION_SIZE] {};
