@@ -71,11 +71,14 @@ int main(int argc, char* argv[]) {
     // Initialize the memoized distance fields array
     for (auto &distanceField: map->memoizedDistanceFields) distanceField = nullptr;
 
-//    // spawnMap will allow for special case world generation
+    // spawnMap will allow for special case world generation
     map->isSpawnMap = true;
-//
-//    // Override seed for the center map
+
+    // Override seed for the center map
     map->mapSeed = timeSeedMilli; // NOLINT(*-narrowing-conversions)
+
+    // Override the name for the center map
+    map->name = "PALLET TOWN";
 
     // Generate the first map outside the game loop, prevents it from regenerating in the game loop.
     MapEntryProps entryProps = map->generateTerrain(world.worldSeed);
